@startuml robotics_class
Robot *-- MobileBase : contains
class Robot {
	+Robot(string serial, int numWheels, string LiDARType, bool withCam, int initial_X, int initial_Y)
    -{static} String robotManufactuer
    +{static} ShowManufactuer()
    +{static} ShowNumberOfRobotsExisting()
    +ShowSerialNo()
    +MobileBase base
	-{static} String robotManufactuer
	-{static} int numberOfRobotsExisting
	-String serialNumber
}
class MobileBase {
	+MobileBase(int numWheels, string LiDARType, bool withCam, int initial_X, int initial_Y)    
	+void MoveX(int dist)
	+void MoveY(int dist)
    +void ShowInfo()
	+Location GetLocation()
	-int numOfWheels
	-string LiDAR
	-bool withCamera
	-Location location
}
MobileBase --> Location : currently at
class Location {
	+Location(int x_val = 0, int y_val = 0)
	+int GetX()
	+int GetY()
	+void SetX(int x_val)
	+void SetY(int y_val)
	-int x
    -int y
}
@enduml